--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "webpack": "webpack --env development",
     "dev": "webpack-dev-server --env development",
     "prod": "webpack --env production",
-    "server": "npm run prod && nodemon server.js"
+    "server": "npm run prod && nodemon server.js",
+    "dll": "webpack --config webpack.dll.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/runtime": "^7.8.7",
     "@babel/runtime-corejs3": "^7.8.7",
+    "add-asset-html-webpack-plugin": "^3.1.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "core-js": "^3.6.4",
@@ -31,8 +33,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "file-loader": "^5.1.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -52,7 +55,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "express": "^4.17.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "tapable": "^2.0.0-beta.10"
   },
   "browserslist": {
     "development": [
